# tarefa26_IA3_embarcatech

./: .gitignore  CMakeLists.txt  dados_teste_norm.h  dados_teste_pca.h  main.c  main.ipynb  model_data.h  modelo_breast_cancer_mlp.keras  pyproject.toml  tflm_wrapper.cpp
output/: breast_cancer_mlp_float.tflite
