[project]
name = "tarefa25-ia3-embarcatech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pip>=25.3",
    "ruff>=0.14.8",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]
